<resources>
    <string name="app_name">LevelUp</string>
    <string name="title_mktplace">Market Place</string>
    <string name="title_jios">Jios</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_events">Events</string>
    <string name="title_mylist">My List</string>
    <string name="time_button">Select a time</string>
    <string name="date_button">Select a date</string>
    <string name="menu_search">Search</string>
    <string name="menu_filter">Filter</string>
    <string name="menu_favourites">Favourites</string>
    <string name="menu_history">History</string>
    <string name="menu_myActivities">My Activities</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="keith_writeup">Keith has used an Android phone his whole life and has often expressed his distaste for iPhones, much to his friends dismay. This project was inspired by his interest in Android development as well as his experience learning Java and Object-Oriented Programming in CS2030</string>
    <string name="thank_you">We would like to express our sincere gratitude to Prof Zhao Jin for offering us this opportunity through CP2106 Orbital to give us a space to learn about application development. \n\nWe would like to thank our advisor, Ms Wang Yuting, for her prompt guidance and support. \n\nWe would also like to thank all our peer groups that have offered us suggestions on how to make the app better. </string>
    <string name="yien_writeup">Yi En has used an iPhone her whole life and have often expressed her distaste for Android phones. This project was inspired by pre-Covid UTown and the Java knowledge she has acquired from CS2030.</string>
    <string name="contact_info">You can contact us on Telegram at @yoongyoong (yien) and @fairyinabottle4 (keith) \n\nIcons made by Freepik from www.flaticon.com</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_edit_occasion_info">EditOccasionInfoActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
</resources>
