<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_mktPlace"
        android:icon="@drawable/ic_marketplace"
        android:title="@string/title_mktplace" />

    <item
        android:id="@+id/navigation_jios"
        android:icon="@drawable/ic_jios"
        android:title="@string/title_jios" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_events"
        android:icon="@drawable/ic_event"
        android:title="@string/title_events" />

    <item
        android:id="@+id/navigation_myList"
        android:icon="@drawable/ic_mylist"
        android:title="@string/title_mylist" />
</menu>
