<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item android:id="@+id/action_cfmed_events"
        android:icon="@drawable/ic_done_white_24dp"
        android:title="@string/menu_myActivities"
        app:showAsAction="always"/>

    <item android:id="@+id/action_fav"
        android:icon="@drawable/ic_favorite_white_24dp"
        android:title="@string/menu_favourites"
        app:showAsAction="always"/>

    <item android:id="@+id/action_filter"
        android:icon="@drawable/ic_sliders"
        android:title="@string/menu_filter"
        app:showAsAction="always" >

        <menu>
            <item
                android:id="@+id/subitem1"
                android:title="All" />
            <item
                android:id="@+id/subitem2"
                android:title="Arts" />
            <item
                android:id="@+id/subitem3"
                android:title="Sports" />
            <item
                android:id="@+id/subitem4"
                android:title="Talks" />
            <item
                android:id="@+id/subitem5"
                android:title="Volunteering" />
            <item
                android:id="@+id/subitem6"
                android:title="Others" />
        </menu>
    </item>

    <item android:id="@+id/action_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/menu_search"
        app:showAsAction="collapseActionView|always"
        app:actionViewClass="android.widget.SearchView"/>
</menu>
