<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/reviews_page_toolbar"
            app:title="About Us"
            android:elevation="5dp"
            app:titleTextColor="@color/colorWhite"
            android:background="@color/colorPrimary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="210dp"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_weight="1"
                android:layout_margin="20dp"
                android:background="@color/fui_transparent"
                android:src="@drawable/yien2" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:background="@color/fui_transparent"
                android:src="@drawable/keith2" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginStart="6dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Yoong Yi En"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/colorPrimaryText"
                android:layout_marginEnd="90dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/colorPrimaryText"
                android:text="Keith Low Jun" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_margin="6dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yien_writeup"
                android:textColor="@color/colorSecondaryText"
                android:layout_margin="4dp"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorSecondaryText"
                android:text="@string/keith_writeup"
                android:layout_margin="4dp"
                android:layout_weight="1"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="8dp"
            android:textColor="@color/colorBlack"
            android:text="Credits"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:text="@string/thank_you"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="8dp"
            android:text="@string/contact_info"/>
    </LinearLayout>

</ScrollView>

